# Bookstore-2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_server.ps1  build_server.sh
.github/workflows/: build-ubuntu.yml  build-windows.yml  coverage.yml
doc/: 总体设计文档.md  用户手册.md  系统安装手册.md  需求分析文档.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: UserIndicator.vue
frontend/src/constants/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: loginStack.ts  validators.ts
frontend/src/views/: BookView.vue  HomeView.vue  LogView.vue  UserView.vue
include/: BlockList.hpp  BooksManager.hpp  Charset.hpp  LogManager.hpp  MemoryRiver.hpp  Session.hpp  UsersManager.hpp  Utils.hpp  Validator.hpp
include/Commands/: BookCommands.hpp  CommandBase.hpp  LogCommands.hpp  UserCommands.hpp
include/Parser/: FieldParser.hpp  Parser.hpp
src/: BooksManager.cpp  CMakeLists.txt  LogManager.cpp  P2967.cpp  Session.cpp  UsersManager.cpp  Util.cpp  Utils.cpp  main.cpp  server.cpp  test.cpp  tmp.cpp
src/Commands/: BookCommands.cpp  CommandBase.cpp  LogCommands.cpp  UserCommands.cpp
src/Parser/: BookParser.cpp  FieldParser.cpp  LogParser.cpp  Parser.cpp  UserParser.cpp
tests/: testBlockList.cpp  testBookCommands.cpp  testBooksManager.cpp  testMemoryRiver.cpp  testUserCommands.cpp  testUsersManager.cpp  testUtils.cpp  testValidator.cpp
